fix(#9327): tab nav alignment (#9473)

--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -1457,11 +1457,12 @@ mm-sidebar-menu .mat-sidenav-container {
           font-size: @font-XXS;
           padding-top: 5px;
           text-overflow: ellipsis;
+          margin-top: 0;
         }
 
         a {
           min-width: 65px;
-          margin-top: 3px;
+          margin-top: 1px;
 
           .mm-icon {
             padding: 8px 0;
